[package]
name = "portal"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.58", default-features = false, features = ["ring", "flate2"] }
russh-sftp = "2.1"
ssh2-config = "0.6"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winresource = "0.1"
